--- a/Portfolio/Milestone Project 1/tictactoe.ipynb
+++ b/Portfolio/Milestone Project 1/tictactoe.ipynb
@@ -48,7 +48,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def open_spaces(board):\n",
+    "    #VARIABLES\n",
+    "    free_spaces = []\n",
+    "\n",
+    "    for space,value in board_layout.items():\n",
+    "        if value in ['X','O']:\n",
+    "            pass\n",
+    "        else:\n",
+    "            free_spaces.append(space)\n",
+    "\n",
+    "    return free_spaces\n",
+    "  \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,12 +129,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First we need to get some information about the players\n",
+      "Player 1 you will be represented by X\n",
+      "Player 2 you will be represented by O\n",
+      "The game is about to start\n",
+      "Round: 1\n",
+      "Get ready to make a move Player 1\n",
+      "\n",
+      "\n",
+      "The valid spaces are: ['Top Left', 'Top Center', 'Top Right', 'Middle Left', 'Middle Center', 'Middle Right', 'Bottom Left', 'Bottom Center', 'Bottom Right']\n",
+      "X| | \n",
+      "-----\n",
+      " | | \n",
+      "-----\n",
+      " | | \n",
+      "\n",
+      "\n",
+      "\n",
+      "Round has finished\n",
+      "\n",
+      "\n",
+      "Round: 2\n",
+      "Get ready to make a move Player 2\n",
+      "\n",
+      "\n",
+      "The valid spaces are: ['Top Center', 'Top Right', 'Middle Left', 'Middle Center', 'Middle Right', 'Bottom Left', 'Bottom Center', 'Bottom Right']\n",
+      "X| |O\n",
+      "-----\n",
+      " | | \n",
+      "-----\n",
+      " | | \n",
+      "\n",
+      "\n",
+      "\n",
+      "Round has finished\n",
+      "\n",
+      "\n",
+      "Round: 3\n",
+      "Get ready to make a move Player 1\n",
+      "\n",
+      "\n",
+      "The valid spaces are: ['Top Center', 'Middle Left', 'Middle Center', 'Middle Right', 'Bottom Left', 'Bottom Center', 'Bottom Right']\n",
+      "X| |O\n",
+      "-----\n",
+      "X| | \n",
+      "-----\n",
+      " | | \n",
+      "\n",
+      "\n",
+      "\n",
+      "Round has finished\n",
+      "\n",
+      "\n",
+      "Round: 4\n",
+      "Get ready to make a move Player 2\n",
+      "\n",
+      "\n",
+      "The valid spaces are: ['Top Center', 'Middle Center', 'Middle Right', 'Bottom Left', 'Bottom Center', 'Bottom Right']\n",
+      "X| |O\n",
+      "-----\n",
+      "X| |O\n",
+      "-----\n",
+      " | | \n",
+      "\n",
+      "\n",
+      "\n",
+      "Round has finished\n",
+      "\n",
+      "\n",
+      "Round: 5\n",
+      "Get ready to make a move Player 1\n",
+      "\n",
+      "\n",
+      "The valid spaces are: ['Top Center', 'Middle Center', 'Bottom Left', 'Bottom Center', 'Bottom Right']\n",
+      "X| |O\n",
+      "-----\n",
+      "X| |O\n",
+      "-----\n",
+      "X| | \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Congrats you've won the game!!!!!!!!!!!!!!!!!!!\n",
+      "\n",
+      "Congrats you've won the game!!!!!!!!!!!!!!!!!!!\n",
+      "\n",
+      "Congrats you've won the game!!!!!!!!!!!!!!!!!!!\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "The game has ended! Here is the final output \n",
+      "\n",
+      "the value of winner is: Player 1\n",
+      "X| |O\n",
+      "-----\n",
+      "X| |O\n",
+      "-----\n",
+      "X| | \n"
+     ]
+    }
+   ],
    "source": [
     "print(\"First we need to get some information about the players\")\n",
-    "\n",
+    "    \n",
     "#GAME INITIALIZATION\n",
     "\n",
     "board_layout = {'Top Left' : ' ',\n",
@@ -142,21 +274,30 @@
     "\n",
     "    print(f\"Round: {turn}\")\n",
     "\n",
-    "    if turn in [1,3,5,7,9]:\n",
+    "    if turn in [1,3,5,7,9]: #determining whos turn it is\n",
     "\n",
     "        player_turn = 'Player 1'\n",
     "    else:\n",
     "\n",
     "        player_turn = 'Player 2'\n",
     "\n",
-    "\n",
     "    print(f\"Get ready to make a move {player_turn}\" + (\"\\n\") * 2)\n",
     "\n",
-    "    update_board(get_player_input(),player_details[player_turn])\n",
+    "    valid_spaces = open_spaces(board_layout) #get valid spaces before prompting user\n",
     "\n",
+    "    print(f\"The valid spaces are: {valid_spaces}\")\n",
+    "    \n",
+    "    player_answer = get_player_input() #get current player answer\n",
+    "\n",
+    "    while player_answer not in valid_spaces: #force current player to choose again \n",
+    "        print(\"That space is taken unfortunately, let's try again.\")\n",
+    "        player_answer = get_player_input()\n",
+    "    \n",
+    "    update_board(player_answer,player_details[player_turn]) #updating board only on succesful answer with current player mark \n",
+    "       \n",
     "    display_board(board_layout)\n",
     "\n",
-    "    if win_check(board_layout,player_details[player_turn]):\n",
+    "    if win_check(board_layout,player_details[player_turn]): #checking for wins after board has been updated\n",
     "\n",
     "        print(\"\\n\" * 5)\n",
     "\n",
@@ -166,7 +307,7 @@
     "\n",
     "        print(\"\\n\" * 5)\n",
     "\n",
-    "        winner = player_details\n",
+    "        winner = player_turn\n",
     "\n",
     "        break\n",
     "\n",
@@ -180,7 +321,8 @@
     "\n",
     "\n",
     "print(\"The game has ended! Here is the final output \\n\")\n",
-    "if winner != ('Player 1' or 'Player 2'):\n",
+    "print (f\"the value of winner is: {winner}\")\n",
+    "if winner not in ['Player 1', 'Player 2']:\n",
     "    print(\"There was no winner for this match\")\n",
     "    print (\"\\n\")\n",
     "\n",
@@ -188,36 +330,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'mattan'"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "player_turn.index()"
+   ]
   }
  ],
  "metadata": {
