Update 01-Object Oriented Programming.ipynb

--- a/05-Object Oriented Programming/01-Object Oriented Programming.ipynb
+++ b/05-Object Oriented Programming/01-Object Oriented Programming.ipynb
@@ -179,10 +179,12 @@
    "source": [
     "class Dog:\n",
     "    def __init__(self,breed):\n",
-    "        self.breed = breed\n",
+    "        self.myattribute = breed\n",
     "        \n",
     "sam = Dog(breed='Lab')\n",
     "frank = Dog(breed='Huskie')"
+    "sam.myattribute"
+    "frank.myattribute"
    ]
   },
   {
