--- a/08-Milestone Project - 2/02-Milestone Project 2 - Walkthrough Steps Workbook.ipynb
+++ b/08-Milestone Project - 2/02-Milestone Project 2 - Walkthrough Steps Workbook.ipynb
@@ -65,17 +65,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
     "\n",
-    "suits = pass\n",
-    "ranks = pass\n",
-    "values = pass\n",
+    "suits = ('Hearts', 'Diamonds', 'Spades', 'Clubs')\n",
+    "ranks = ('Two', 'Three', 'Four', 'Five', 'Six', 'Seven', 'Eight', 'Nine', 'Ten', 'Jack', 'Queen', 'King', 'Ace')\n",
+    "values = {'Two':2, 'Three':3, 'Four':4, 'Five':5, 'Six':6, 'Seven':7, 'Eight':8, 'Nine':9, 'Ten':10, 'Jack':10,\n",
+    "         'Queen':10, 'King':10, 'Ace':11}\n",
     "\n",
     "playing = True"
    ]
@@ -98,19 +97,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Card:\n",
     "    \n",
-    "    def __init__(self):\n",
-    "        pass\n",
+    "    def __init__(self,suit,rank):\n",
+    "        self.suit = suit\n",
+    "        self.rank = rank\n",
     "    \n",
     "    def __str__(self):\n",
-    "        pass"
+    "        return self.rank + \" of \" + self.suit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "twohearts = Card(suits[0],ranks[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Two of Hearts\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(twohearts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Two'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "twohearts.rank"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hearts'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "twohearts.suit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Card at 0x24772efd100>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "twohearts"
    ]
   },
   {
@@ -129,10 +213,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 40,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Deck:\n",
@@ -141,16 +223,16 @@
     "        self.deck = []  # start with an empty list\n",
     "        for suit in suits:\n",
     "            for rank in ranks:\n",
-    "                pass\n",
+    "                self.deck.append(Card(suit,rank))\n",
     "    \n",
     "    def __str__(self):\n",
-    "        pass\n",
-    "\n",
+    "         return '--'.join(str(item) for item in self.deck)\n",
+    "        \n",
     "    def shuffle(self):\n",
     "        random.shuffle(self.deck)\n",
     "        \n",
     "    def deal(self):\n",
-    "        pass"
+    "        return self.deck.pop() "
    ]
   },
   {
@@ -162,11 +244,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Two of Hearts--Three of Hearts--Four of Hearts--Five of Hearts--Six of Hearts--Seven of Hearts--Eight of Hearts--Nine of Hearts--Ten of Hearts--Jack of Hearts--Queen of Hearts--King of Hearts--Ace of Hearts--Two of Diamonds--Three of Diamonds--Four of Diamonds--Five of Diamonds--Six of Diamonds--Seven of Diamonds--Eight of Diamonds--Nine of Diamonds--Ten of Diamonds--Jack of Diamonds--Queen of Diamonds--King of Diamonds--Ace of Diamonds--Two of Spades--Three of Spades--Four of Spades--Five of Spades--Six of Spades--Seven of Spades--Eight of Spades--Nine of Spades--Ten of Spades--Jack of Spades--Queen of Spades--King of Spades--Ace of Spades--Two of Clubs--Three of Clubs--Four of Clubs--Five of Clubs--Six of Clubs--Seven of Clubs--Eight of Clubs--Nine of Clubs--Ten of Clubs--Jack of Clubs--Queen of Clubs--King of Clubs--Ace of Clubs\n"
+     ]
+    }
+   ],
    "source": [
     "test_deck = Deck()\n",
     "print(test_deck)"
@@ -452,7 +540,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
