Update 09-Objects and Data Structures Assessment Test.ipynb

--- a/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
+++ b/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
@@ -39,7 +39,7 @@
     "Double Click HERE to edit this markdown cell and write answers.\n",
     "\n",
     "Numbers:\n",
-    "\n",
+    "integers and floating numbers, 1 or 1.0\n",
     "Strings:\n",
     "\n",
     "Lists:\n",
