--- a/Portfolio/Object Oriented Programming/04-OOP Challenge.ipynb
+++ b/Portfolio/Object Oriented Programming/04-OOP Challenge.ipynb
@@ -34,38 +34,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "class Account:\n",
-    "\n",
+    "    \n",
     "    def __init__ (self,owner,balance):\n",
     "\n",
-    "       pass\n",
+    "        #INITIALIZED ATTRIBUTES\n",
+    "        self.owner = owner\n",
+    "        self.balance = balance\n",
+    "\n",
+    "\n",
+    "    def __str__(self):\n",
+    "    \n",
+    "        return f\"Account owner: {self.owner} \\nAccount balance: {self.balance}\"    \n",
+    "\n",
+    "\n",
     "\n",
     "    def deposit(self,amount):\n",
     "        \n",
-    "        #increase balance by the amount which must be positive value\n",
+    "        #increase balance by the amount [must be positive value]\n",
     "\n",
-    "        if amount <=0:\n",
+    "        if amount <=0: #checking to see if valid input\n",
     "            print(\"Not a valid depost amount\")\n",
+    "        else:\n",
+    "            self.balance += amount #updating balance by the amount\n",
+    "            print(f\"Deposit completed. The new balance amount is : {self.balance}\")\n",
     "\n",
-    "        print(f\"The new balance amount is : {balance}\")\n",
+    "        \n",
+    "    def withdraw(self,amount):\n",
+    "        \n",
+    "        #decrease balance by the amount [withdrawl must be positive value and not cause overdraft]\n",
     "\n",
-    "        balance += amount\n",
+    "        if abs(amount) > self.balance:\n",
+    "            print(\"Can't complete request since it's larger than the current balance\")\n",
+    "            \n",
+    "        else:\n",
+    "            self.balance -= abs(amount) #updating balance by the amount\n",
+    "            print(f\"Withdrawl completed. The new balance amount is : {self.balance}\")\n",
     "\n",
-    "        return balance\n",
-    "\n",
-    "    def withdraw(self):\n",
-    "        pass\n",
-    "\n",
-    "    def __str__(self):\n",
-    "\n",
-    "        print(f\"Account owner {self.owner}\")\n",
-    "        print(f\"Account balance {self.balance}\")\n",
     "    "
    ]
   },
@@ -90,8 +101,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Account owner:   Jose\n",
-      "Account balance: $100\n"
+      "Account owner: Jose \n",
+      "Account balance: 100\n"
      ]
     }
    ],
@@ -151,7 +162,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deposit Accepted\n"
+      "Deposit completed. The new balance amount is : 150\n"
      ]
     }
    ],
@@ -169,7 +180,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Withdrawal Accepted\n"
+      "Withdrawl completed. The new balance amount is : 75\n"
      ]
     }
    ],
@@ -186,7 +197,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Funds Unavailable!\n"
+      "Can't complete request since it's larger than the current balance\n"
      ]
     }
    ],
@@ -201,6 +212,11 @@
    "source": [
     "## Good job!"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
