--- a/Milestone_2/war.ipynb
+++ b/Milestone_2/war.ipynb
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -288,16 +288,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "0\n",
-      "52\n"
+      "7\n",
+      "7\n",
+      "38\n"
      ]
     }
    ],
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,8 +318,8 @@
     "    try:\n",
     "        player_1.add_card(game_deck.remove_card())\n",
     "        player_2.add_card(game_deck.remove_card())\n",
-    "        # print(len(player_1))\n",
-    "        # print(len(player_2))\n",
+    "        # print(player_1.name,\"has a list length of\",len(player_1))\n",
+    "        # print(player_2.name,\"has a list length of\",len(player_2))\n",
     "    except:\n",
     "        print(\"Unable to remove card from deck. Confirm that there are cards in the deck.\\n\")    \n",
     "\n"
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -336,47 +336,72 @@
      "text": [
       "Players be ready to show your cards!\n",
       "\n",
-      "Player One presents: Seven of Diamonds\n",
-      " Player Two presents: Seven of Hearts\n",
+      "Player One presents: Queen of Diamonds\n",
+      " Player Two presents: Two of Clubs\n",
       "\n",
-      "WAR WAR WAR WAR WAR WAR WAR WAR\n",
+      "Mattan wins!\n",
+      "\n",
+      "Mattan list length is: 7\n",
       "Players be ready to show your cards!\n",
       "\n",
-      "Player One presents: Three of Clubs\n",
-      " Player Two presents: Eight of Clubs\n",
+      "Player One presents: Queen of Hearts\n",
+      " Player Two presents: Ten of Hearts\n",
+      "\n",
+      "Mattan wins!\n",
+      "\n",
+      "Mattan list length is: 7\n",
+      "Players be ready to show your cards!\n",
+      "\n",
+      "Player One presents: Four of Hearts\n",
+      " Player Two presents: Ace of Hearts\n",
       "\n",
       "Torrey wins!\n",
       "\n",
       "Players be ready to show your cards!\n",
       "\n",
-      "Player One presents: Six of Clubs\n",
-      " Player Two presents: Three of Hearts\n",
-      "\n",
-      "Mattan wins!\n",
-      "\n",
-      "Players be ready to show your cards!\n",
-      "\n",
-      "Player One presents: Ten of Clubs\n",
-      " Player Two presents: Ten of Diamonds\n",
+      "Player One presents: Three of Hearts\n",
+      " Player Two presents: Three of Diamonds\n",
       "\n",
       "WAR WAR WAR WAR WAR WAR WAR WAR\n",
       "Players be ready to show your cards!\n",
       "\n",
-      "Player One presents: Three of Diamonds\n",
-      " Player Two presents: Eight of Diamonds\n",
+      "Player One presents: Three of Clubs\n",
+      " Player Two presents: Jack of Diamonds\n",
+      "\n",
+      "Torrey wins!\n",
+      "\n",
+      "Players be ready to show your cards!\n",
+      "\n",
+      "Player One presents: Four of Diamonds\n",
+      " Player Two presents: Nine of Spades\n",
+      "\n",
+      "Torrey wins!\n",
+      "\n",
+      "Players be ready to show your cards!\n",
+      "\n",
+      "Player One presents: Six of Diamonds\n",
+      " Player Two presents: Queen of Spades\n",
+      "\n",
+      "Torrey wins!\n",
+      "\n",
+      "Players be ready to show your cards!\n",
+      "\n",
+      "Player One presents: Two of Clubs\n",
+      " Player Two presents: Four of Hearts\n",
       "\n",
       "Torrey wins!\n",
       "\n",
       "Players be ready to show your cards!\n",
       "\n",
       "Player One presents: Ten of Hearts\n",
-      " Player Two presents: Nine of Spades\n",
+      " Player Two presents: Three of Clubs\n",
       "\n",
       "Mattan wins!\n",
       "\n",
+      "Mattan list length is: 1\n",
       "Players be ready to show your cards!\n",
       "\n",
-      "Player One presents: Two of Hearts\n",
+      "Player One presents: Three of Clubs\n",
       " Player Two presents: Four of Diamonds\n",
       "\n",
       "Torrey wins!\n",
@@ -401,6 +426,9 @@
     "\n",
     "    if player_1_card.value > player_2_card.value:\n",
     "        print(f\"{player_1.name} wins!\\n\")\n",
+    "\n",
+    "        player_1.player_deck.append(player_2_card)\n",
+    "        print(player_1.name,\"list length is:\",len(player_1))\n",
     "    \n",
     "    elif player_1_card.value == player_2_card.value:\n",
     "        print(\"WAR WAR WAR WAR WAR WAR WAR WAR\")\n",
@@ -412,7 +440,7 @@
     "    \n",
     "    else:\n",
     "        print(f\"{player_2.name} wins!\\n\")\n",
-    "\n",
+    "        player_2.player_deck.append(player_1_card)\n",
     "\n",
     "\n",
     "\n",
