answered some test questions

--- a/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
+++ b/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
@@ -38,13 +38,13 @@
    "source": [
     "Double Click HERE to edit this markdown cell and write answers.\n",
     "\n",
-    "Numbers:\n",
+    "Numbers: integers, floats\n",
     "\n",
-    "Strings:\n",
+    "Strings: a-z0-9 denoted by single or double quote. Immutable\n",
     "\n",
-    "Lists:\n",
+    "Lists: mutable collection of objects\n",
     "\n",
-    "Tuples:\n",
+    "Tuples: lists except\n",
     "\n",
     "Dictionaries:\n"
    ]
