--- a/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
+++ b/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
@@ -42,11 +42,11 @@
     "\n",
     "Strings: a-z0-9 denoted by single or double quote. Immutable\n",
     "\n",
-    "Lists: mutable collection of objects\n",
+    "Lists: mutable collection of objects. constructed with brackets []\n",
     "\n",
-    "Tuples: lists except\n",
+    "Tuples: lists except immutable. good for data integrity. \n",
     "\n",
-    "Dictionaries:\n"
+    "Dictionaries: signified by {} key:value pairs (with nesting). Unordered. Ordered dictionary available. \n"
    ]
   },
   {
@@ -62,12 +62,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100.25"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "100 + 0.25"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -84,18 +97,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "34"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "4 * (6 + 5) # 44\n",
+    "4 * 6 + 5 # 29\n",
+    "4 + 6 * 5 # 34"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What is the *type* of the result of the expression 3 + 1.5 + 4?<br><br>"
+    "What is the *type* of the result of the expression 3 + 1.5 + 4?<br><br>\n",
+    "Float"
    ]
   },
   {
@@ -107,24 +136,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Square root:\n"
+    "# Square root:\n",
+    "import math\n",
+    "math.sqrt(4)\n",
+    "# OR\n",
+    "4**0.5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Square:\n"
+    "# Square:\n",
+    "2**3"
    ]
   },
   {
@@ -143,15 +199,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "e\n",
+      "e\n"
+     ]
+    }
+   ],
    "source": [
     "s = 'hello'\n",
     "# Print out 'e' using indexing\n",
-    "\n"
+    "print(s[1:2])\n",
+    "# OR \n",
+    "print(s[1])\n"
    ]
   },
   {
@@ -163,15 +230,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'olleh'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "s ='hello'\n",
     "# Reverse the string using slicing\n",
-    "\n"
+    "s[::-1]\n"
    ]
   },
   {
@@ -183,29 +261,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'o'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "s ='hello'\n",
     "# Print out the 'o'\n",
     "\n",
     "# Method 1:\n",
+    "s[4]\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'o'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Method 2:\n",
-    "\n"
+    "s[-1]\n"
    ]
   },
   {
@@ -224,24 +325,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 0, 0]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Method 1:\n"
+    "# Method 1:\n",
+    "mylist = [0]*3\n",
+    "mylist"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 0, 0]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Method 2:\n"
+    "# Method 2:\n",
+    "mylist = None\n",
+    "mylist = [0,0,0]\n",
+    "mylist"
    ]
   },
   {
@@ -253,14 +381,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, [3, 4, 'goodbye']]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list3 = [1,2,[3,4,'hello']]\n",
-    "\n"
+    "\n",
+    "list3[2][2]= 'goodbye'\n",
+    "list3"
    ]
   },
   {
@@ -272,13 +413,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 4, 5, 6]\n",
+      "[5, 3, 4, 6, 1]\n",
+      "[1, 3, 4, 5, 6]\n"
+     ]
+    }
+   ],
    "source": [
     "list4 = [5,3,4,6,1]\n",
+    "print(sorted(list4)) #doesnt sort in place\n",
+    "print(list4)\n",
+    "list4.sort() # sorts in place\n",
+    "#list4\n",
+    "print(list4)\n",
     "\n"
    ]
   },
@@ -298,59 +454,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hello'"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "d = {'simple_key':'hello'}\n",
-    "# Grab 'hello'\n"
+    "# Grab 'hello'\n",
+    "d['simple_key']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hello'"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "d = {'k1':{'k2':'hello'}}\n",
-    "# Grab 'hello'\n"
+    "# Grab 'hello'\n",
+    "d['k1']['k2']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hello'"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Getting a little tricker\n",
     "d = {'k1':[{'nest_key':['this is deep',['hello']]}]}\n",
     "\n",
-    "#Grab hello\n"
+    "#Grab hello\n",
+    "d['k1'][0]['nest_key'][1][0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hello'"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# This will be hard and annoying!\n",
-    "d = {'k1':[1,2,{'k2':['this is tricky',{'tough':[1,2,['hello']]}]}]}"
+    "d = {'k1':[1,2,{'k2':['this is tricky',{'tough':[1,2,['hello']]}]}]}\n",
+    "\n",
+    "d['k1'][2]['k2'][1]['tough'][2][0]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Can you sort a dictionary? Why or why not?<br><br>"
+    "Can you sort a dictionary? Why or why not?<br><br>\n",
+    "\n",
+    "No, normal dictionaries are mappings. Unless you use ordereddict object."
    ]
   },
   {
@@ -364,14 +571,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What is the major difference between tuples and lists?<br><br>"
+    "What is the major difference between tuples and lists?<br><br>\n",
+    "\n",
+    "tuples are immutable."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "How do you create a tuple?<br><br>"
+    "How do you create a tuple?<br><br>\n",
+    "\n",
+    "Using parenthesis. \n",
+    "t = (1,2,3)"
    ]
   },
   {
@@ -385,7 +597,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What is unique about a set?<br><br>"
+    "What is unique about a set?<br><br>\n",
+    "\n",
+    "Contain only unique values."
    ]
   },
   {
@@ -397,15 +611,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2, 3, 4, 11, 22, 33}"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list5 = [1,2,2,33,4,4,11,22,3,3,2]\n",
     "\n",
-    "\n"
+    "set(list5) #prints\n"
    ]
   },
   {
@@ -467,62 +692,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Answer before running cell\n",
-    "2 > 3"
+    "2 > 3\n",
+    "False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Answer before running cell\n",
-    "3 <= 2"
+    "3 <= 2\n",
+    "False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Answer before running cell\n",
-    "3 == 2.0"
+    "3 == 2.0\n",
+    "False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Answer before running cell\n",
-    "3.0 == 3"
+    "3.0 == 3\n",
+    "True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Answer before running cell\n",
-    "4**0.5 != 2"
+    "4**0.5 != 2\n",
+    "False"
    ]
   },
   {
@@ -534,18 +819,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# two nested lists\n",
     "l_one = [1,2,[3,4]]\n",
     "l_two = [1,2,{'k1':4}]\n",
     "\n",
     "# True or False?\n",
-    "l_one[2][0] >= l_two[2]['k1']"
+    "l_one[2][0] >= l_two[2]['k1']\n",
+    "False"
    ]
   },
   {
@@ -559,7 +856,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -573,7 +870,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "4c077c30561241be03c41ae9383d0790cec0a69af14a8824d4f85b0977298f57"
+   }
   }
  },
  "nbformat": 4,
